# cnr_motion_control

cnr_follow_joint_trajectory_controller/: CMakeLists.txt  package.xml
cnr_follow_joint_trajectory_controller/include/cnr_follow_joint_trajectory_controller/: cnr_follow_joint_trajectory_controller.h  cnr_follow_joint_trajectory_pos_controller.h  cnr_follow_joint_trajectory_posveleff_controller.h
cnr_follow_joint_trajectory_controller/include/cnr_follow_joint_trajectory_controller/internal/: cnr_follow_joint_trajectory_controller_impl.h
cnr_interpolator_interface/: CMakeLists.txt  package.xml
cnr_interpolator_interface/include/cnr_interpolator_interface/: cnr_interpolator_inputs.h  cnr_interpolator_interface.h  cnr_interpolator_outputs.h  cnr_interpolator_point.h  cnr_interpolator_state.h  cnr_interpolator_trajectory.h
cnr_interpolator_interface/include/cnr_interpolator_interface/internal/: cnr_interpolator_base.h  cnr_interpolator_interface_impl.h
cnr_interpolator_interface/src/cnr_interpolator_interface/: cnr_interpolator_interface.cpp
cnr_interpolator_interface/src/cnr_interpolator_interface/internal/: cnr_interpolator_base.cpp
cnr_interpolator_interface/test/: test.cpp
lookahead_prefilter/: CMakeLists.txt  package.xml  plugin.xml
lookahead_prefilter/include/lookahead_prefilter/: cartesian_lookahead_prefilter.h
lookahead_prefilter/src/lookahead_prefilter/: cartesian_lookahead_prefilter.cpp
thor_prefilter/: CMakeLists.txt  package.xml  plugin.xml
thor_prefilter/include/thor_prefilter/: thor_prefilter.h
thor_prefilter/src/: test_prefilter.cpp
thor_prefilter/src/thor_prefilter/: thor_prefilter.cpp
thor_prefilter_controller/: CMakeLists.txt  package.xml  plugin.xml
thor_prefilter_controller/config/: predefined_position.yaml  test.yaml
thor_prefilter_controller/include/thor_prefilter_controller/: thor_prefilter_controller_impl.h
thor_prefilter_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
thor_prefilter_controller/install/thor_prefilter_controller/include/thor_prefilter_controller/: thor_prefilter_controller.h
thor_prefilter_controller/install/thor_prefilter_controller/share/thor_prefilter_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
thor_prefilter_controller/install/thor_prefilter_controller/share/thor_prefilter_controller/cmake/: thor_prefilter_controllerConfig.cmake
thor_prefilter_controller/launch/: execute_trj.launch  test.launch
thor_prefilter_controller/log/: latest_build
thor_prefilter_controller/src/thor_prefilter_controller/: thor_prefilter_controller.cpp
