<?xml version="1.0"?>
<package format="2">
  <name>thor_prefilter_controller</name>
  <version>0.0.0</version>
  <description>The thor_prefilter_controller package</description>

  <maintainer email="manuel.beschi@stiima.cnr.it">Manuel Beschi</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cnr_controller_interface</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>thor_prefilter</build_depend>
  <build_export_depend>cnr_controller_interface</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>thor_prefilter</build_export_depend>
  <exec_depend>cnr_controller_interface</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>thor_prefilter</exec_depend>
  <depend>cnr_hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>actionlib</depend> 
  <depend>trajectory_msgs</depend> 
  <depend>control_msgs</depend> 
  <depend>sensor_msgs</depend>
  <depend>moveit_planning_helper</depend> 
  <depend>name_sorting</depend>  
  

  <export>
    <controller_interface plugin="${prefix}/plugin.xml"/>
  </export>
</package>
